@@ -1,0 +1,7 @@
+require File.dirname(__FILE__) + '/spec_helper'
+
+describe "pending" do
+  it "should be pending" do
+    pending("something")
+  end
+end
