@@ -1,0 +1,6 @@
+module Spec
+  module DSL
+    class ExamplePendingError < StandardError
+    end
+  end
+end
